Debugging multiple outputs

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 DistributedEmitterOpt = "12345678-1234-1234-1234-123456789abc"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 
 [sources.DistributedEmitterOpt]
 path = ".."
