--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,18 @@
-*.png filter=lfs diff=lfs merge=lfs -text
+# Git LFS tracking for large binary files
+# See: https://git-lfs.com
+
+# VTK visualization files (very large - 50-350 MB each)
+*.vtu filter=lfs diff=lfs merge=lfs -text
+*.vtk filter=lfs diff=lfs merge=lfs -text
+
+# Julia serialized data files
+*.jld2 filter=lfs diff=lfs merge=lfs -text
+
+# Mesh files
+*.msh filter=lfs diff=lfs merge=lfs -text
+
+# Document/figure outputs
 *.pdf filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
