--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,6 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
+
+# Exclude docs assets from LFS
+docs/src/assets/* -filter -diff -merge text
