--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -41,6 +42,6 @@ DataFrames = "1.8.1"
 KrylovKit = "0.10.2"
 MUMPS = "1"
 Pardiso = "0.5"
+Printf = "1.11.0"
 PyCall = "1.96.4"
 julia = "1.9"
-
