--- a/Project.toml
+++ b/Project.toml
@@ -30,11 +30,12 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [weakdeps]
 MUMPS = "55d2b088-9f4e-11e9-26c0-150b02ea6a46"
+GridapPardiso = "34aa2546-dee6-11e9-014e-739fa02ec06f"
 Pardiso = "46dd5b70-b6fb-5a00-ae2d-e8fea33afaf2"
 
 [extensions]
 MUMPSExt = "MUMPS"
-PardisoExt = "Pardiso"
+PardisoExt = ["Pardiso", "GridapPardiso"]
 
 [compat]
 CSV = "0.10.15"
